Enhancements to: v4.0.0 Development Release - May 28, 2019
   - Upgraded solution VS 2017.
   - Removed 32-bit support as nobody has asked for it in nearly 4 years.
   - Upgraded to gwnum v29.8b3.
   - Upgraded to mpir 3.0.0.
   - Switch to primesieve 7.4 for all prime sieving functions.
   - Accurately count the number of primes to trial factor with.
   - When trial factoring, show the trial factoring limit.
   - Added -T option to support multiple threads.
   - Use inttypes.h on all platforms.
   - Fix trivial factoring when using a script.

Enhancements to: v3.8.3 Development Release - December 3, 2016
   - Increased support of first line in ABC file to 10,000,000 characters.

Enhancements to: v3.8.2 Development Release - July 7, 2016
   - Fixed issue when restarting pfgw with a DECIMAL file.

Enhancements to: v3.8.1 Development Release - June 3, 2016
   - Added DECIMAL file format support.
     
Enhancements to: v3.8.0 Development Release - May 27, 2016
   - Add Smarandache-Wellin functions (SmW and SmWp).
   - Add Copeland-Erdos function (CE).
   - If using both -k and -od, then the decimal expansion is only written to 
     the log.
   - Allow input lines to be up to 5000000 bytes.  This will allow easy
     verification of factors of large decimal values.

Enhancements to: v3.7.10 Development Release - August 9, 2015
   - Fixed trial division bug that has existed since 3.4.0.  This bug
     caused PFGW to miss factors larger than 64000 during trial division.

Enhancements to: v3.7.9 Development Release - April 12, 2015
   - Updated to gwnum v28.6.


Enhancements to: v3.7.8 Development Release - November 27, 2014
   - Updated to gwnum v28.5.
   - Updated to Visual Studio 2012.
   - Addressed new compiler issues raised by clang.
   - Allow pfgw to validate factors in .log files generated from various sieving
     programs.  Each line in the input file must have the form:  factor | number.